# knowledgedigest

./: .gitignore  ARCHITECTURE.md  BACH_INTEGRATION_GAP_ANALYSIS.md  CHANGELOG.md  CONTRIBUTING.md  KnowledgeDigest.spec  README.md  README_de.md  SECURITY.md  TODO.md  VALIDATION.md  VALIDATION_REPORT_WISSENSDATENBANK.md  __init__.py  __main__.py  chunker.py  config.py  digest.py  ellmos-module.v2.json  extractor.py  gemini_flash_summarizer.py  indexer.py  ingestor.py  launcher.py  llms.txt  pyproject.toml  requirements.txt  schema.py  start.bat  summarizer.py  utils.py  web_viewer.py  wiki_indexer.py  zoll_station.py
.github/: dependabot.yml
.github/workflows/: tests.yml
gui/: __init__.py  app.py  event_bus.py  main_window.py
gui/dialogs/: __init__.py  ingest_dialog.py  settings_dialog.py
gui/panels/: __init__.py  directory_panel.py  document_list.py  preview_panel.py
gui/widgets/: __init__.py  search_bar.py
scripts/: create_summaries.py  patch_webviewer.py  process_summaries.py
tests/: test_core.py  test_flash_summarizer.py  test_web_viewer_security.py
